navbar first version, top image with centered text

--- a/pub.html
+++ b/pub.html
@@ -10,7 +10,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- Custom Styles CSS-->
     <link rel="stylesheet" type="text/css" href="pubCustomStyles.css">
-    <title>Food Delivery</title>
+    <title>The Swan & Tomato</title>
   </head>
   
   <body>
@@ -33,7 +33,7 @@
                     <a class="nav-link" href="#about">The Kitchen</a>
                   </li>
                   <li class="nav-item mx-md-4 nestedBrand">
-                    <a class="nav-link" href="#about">The Swan & Tomato Pub</a>
+                    <a class="nav-link" href="#about">The Swan & Tomato</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#contact">The Garden</a>
@@ -48,7 +48,17 @@
             </a> -->
         </nav>
 
-        
+        <div class="row mt-4 topImage align-items-center">
+            <div class="col-12 align-items-center">
+                <div class="row topImageTextBox">
+                    <h3 class="m-auto text-center topImageText">A HANDSOMELY <br> RESTORED PUB <br> ON BROAD SANCTUARY </h3>
+                </div>
+            </div>
+        </div>
+
+
+
+
    
 
         
