Opening hours section added

--- a/pub.html
+++ b/pub.html
@@ -56,6 +56,58 @@
             </div>
         </div>
 
+        <div class="row justify-content-center py-4">
+            <ul class="text-center infoBlock firstInfoBlock">
+                <li><h4>OPENING TIMES</h4></li>
+                <br>
+                <li>Mon - Wed : 4pm-11pm</li>
+                <li>Thurs : 4pm – midnight</li>
+                <li>Fri - Sat : noon – 1am</li>
+                <li>Sun : noon – 11pm</li>
+            </ul>
+        </div>
+
+        <div class="row justify-content-center py-4">
+            <ul class="text-center infoBlock">
+                <li><h4>KITCHEN OPENING TIMES</h4></li>
+                <br>
+                <li>Mon - Thurs : 4pm – 10pm</li>
+                <li>Fri - Sat : noon - 10pm</li>
+                <li>Sun : noon - 9pm</li>
+            </ul>
+        </div>
+
+        <div class="row justify-content-center py-4">
+            <ul class="text-center infoBlock">
+                <li><h4>HAPPY HOUR</h4></li>
+                <br>
+                <li>Mon - Wed : 4pm – 8pm</li>
+                <li>Sat - Sun : noon – 4pm</li>
+            </ul>
+        </div>
+
+        <div class="row justify-content-center py-4">
+            <ul class="text-center infoBlock">
+                <li><h4>ADDRESS</h4></li>
+                <br>
+                <li>155 Homerton High Street</li>
+                <li>London E9 6AS</li>
+            </ul>
+        </div>
+
+        <div class="row justify-content-center py-4 lastInfoBlock">
+            <ul class="text-center infoBlock">
+                <li><h4>CONTACT</h4></li>
+                <br>
+                <li>info@adamandevepub.com</li>
+                <li>020 8985 1494</li>
+                <br>
+                <li><a href=# class="d-block">
+                    <button type="button" class="btn px-5 py-2 reserveTable">RESERVE A TABLE</button>
+                </a></li>
+            </ul>
+        </div>
+
 
 
 
