--- a/pub.html
+++ b/pub.html
@@ -108,6 +108,38 @@
             </ul>
         </div>
 
+        <div class="row">
+          <div class="col pictureGallery mb-5">
+
+            <div id="carouselExampleIndicators" class="carousel slide myCarousel" data-ride="carousel">
+              <ol class="carousel-indicators positionIndicators">
+                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+              </ol>
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img class="d-block w-100" src="./images/edouard-dognin-2AcwMjihSUw-unsplash.jpg" alt="First slide">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="images/changyoung-koh-qMMkVrF9B2w-unsplash.jpg" alt="Second slide">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="./images/peter-wendt--r5KSMkyoSc-unsplash.jpg" alt="Third slide">
+                </div>
+              </div>
+              <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
+            </div>
+
+          </div>
+        </div>
 
 
 
