--- a/pub.html
+++ b/pub.html
@@ -116,6 +116,9 @@
                 <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                 <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
                 <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
               </ol>
               <div class="carousel-inner">
                 <div class="carousel-item active">
@@ -127,12 +130,85 @@
                 <div class="carousel-item">
                   <img class="d-block w-100" src="./images/peter-wendt--r5KSMkyoSc-unsplash.jpg" alt="Third slide">
                 </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="./images/roast_dinner.jpg" alt="Fourth slide">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="./images/mink-mingle-LGNxQzYmeUk-unsplash.jpg" alt="Fifth slide">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="./images/pablo-merchan-montes-0nT08Z-MhiE-unsplash.jpg" alt="Sixth slide">
+                </div>
               </div>
               <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="sr-only">Previous</span>
               </a>
               <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
+            </div>
+
+          </div>
+        </div>
+
+        
+
+        <div class="row justify-content-center text-center mt-5 mb-4 mx-auto w-50">
+          <h4>The Garden</h4>
+          <br><br>
+          <p>Our garden has been refurbished to create a more inviting outside space that people can enjoy all year round. We’ve added stainless planters and new corner beds full of colourful plants such as fresh lavender for a delicate scent, Heavenly Bamboo that flowers in summer, Sundowner, an evergreen with pink-edged leaves that will last all year round, and our main feature: a Chusen Palm that can grow as tall as 12 metres.
+            <br><br>
+            We’ve repainted the walls to brighten them up, and we’ve built brand new tables to seat more people. Our photos show the transformation of our garden and we hope you like it as much as we do. With a tasting garden also in the works, our outside area is fast becoming something special.</p>
+        </div>
+
+        <div class="row align-items-center">
+          <div class="col-xs-12 col-lg-6 py-5">
+            <img class="img-fluid mx-auto d-block w-75" src="images/k-mitch-hodge-dE8kZkt25bs-unsplash.jpg" alt="" />
+          </div>
+          <div class="col-xs-12 col-lg-6 py-5">
+            <img class="img-fluid mx-auto d-block w-75" src="images/sandro-cenni-GXJhY_ZD0UQ-unsplash.jpg" alt="" />
+          </div>
+        </div>
+
+        <div class="row mt-5">
+          <div class="col pictureGallery mb-5">
+
+            <div id="carouselExampleIndicators2" class="carousel slide myCarousel" data-ride="carousel">
+              <ol class="carousel-indicators positionIndicators">
+                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+              </ol>
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img class="d-block w-100" src="./images/luca-bravo-8x_fFNrmeDk-unsplash.jpg" alt="First slide">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="images/old-youth-D8ujoE9ylh0-unsplash.jpg" alt="Second slide">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="./images/alexander-popov-2GNBoMgKYEo-unsplash.jpg" alt="Third slide">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="./images/adam-jaime-dmkmrNptMpw-unsplash.jpg" alt="Fourth slide">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="./images/marvin-meyer-2SDjvx5jEZQ-unsplash.jpg" alt="Fifth slide">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="./images/freestocks-_l18nKL3lNE-unsplash.jpg" alt="Sixth slide">
+                </div>
+              </div>
+              <a class="carousel-control-prev" href="#carouselExampleIndicators2" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#carouselExampleIndicators2" role="button" data-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="sr-only">Next</span>
               </a>
